downgrade to java 8 for cloudflare pages